[tool.poetry]
name = "panel-chat"
version = "0.1.0"
description = "Chat interfaces for RAG and context based text augmentation using the Panel library and its new Chat Components; Panels chat components are multi modal and supports LangChain, Llamaindex, OpenAI, Mistral, Llama, and others."
authors = ["Sytse van der Schaaf <sytse@svanderschaaf.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai-async = "^0.0.3"
openai-chat = "^0.0.3"
langchain = "^0.0.352"
chromadb = "^0.4.21"
Chroma = "^0.2.0"
chromadb-client = "^0.4.19.dev0"
panel = "1.3.0"
panel-chat-examples = {git = "https://github.com/holoviz-topics/panel-chat-examples.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
